# LLVM-compilers-course

./: README.md
GameOfLife/: CMakeLists.txt  README.md  app.cpp  game_of_life.cpp  game_of_life.h  game_of_life.ll
GameOfLife/grlib/: CMakeLists.txt  graph_lib.cpp  graph_lib.h
LLVMPass/: .gitignore  Makefile  README.md  log.c  pass_cfg.cpp  trace_analizer.py
